Correct link addresses in app

--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -10,7 +10,7 @@ layout: wrapper
 		<div class="font-italic btn btn-danger btn-lg btn-block shadow overflow_wrap mb-3 text-left"><span class="tick"></span>Cardiopulmonary Rehabilitation</div>		
 	</div>
 	<div class="text-center col-lg-8 py-xl-4 mt-lg-5 mt-xl-0">
-		<img src="{{site.baseurl}}/assets/images/main.jpg" class="img-fluid" id="img_main">
+		<img src="/assets/images/main.jpg" class="img-fluid" id="img_main">
 	</div>
 </section>
 
@@ -38,7 +38,7 @@ layout: wrapper
 			<li>Deputy Chair of APA acupuncture and dry needling committee</li>
 			<li>Committee member of APA Physiotherapy Business Australia</li>			
 		</ul>
-		<button class="btn btn-secondary float-right"><a href="{{site.baseurl}}/about/" class="text-white">More About Us</a></button>
+		<button class="btn btn-secondary float-right"><a href="/about/" class="text-white">More About Us</a></button>
 	</div>
 </div>
 
