--- a/_layouts/wrapper.html
+++ b/_layouts/wrapper.html
@@ -9,7 +9,7 @@
     </title>
        
     <!-- Add icon -->
-    <link rel="shortcut icon" href="{{site.baseurl}}/assets/images/logo.jpg" type="image/jpg">
+    <link rel="shortcut icon" href="/assets/images/logo.jpg" type="image/jpg">
 
     <!-- Google font -->
     <link href="https://fonts.googleapis.com/css?family=Lobster" rel="stylesheet">
@@ -18,7 +18,7 @@
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-beta/css/bootstrap.min.css" integrity="sha384-/Y6pD6FV/Vv2HJnA6t+vslU6fwYXjCFtcEpHbNJ0lyAFsXTsjBbfaDjzALeQsN6M" crossorigin="anonymous">
 
     <!-- My CSS -->
-    <link rel="stylesheet" href="{{site.baseurl}}/css/application.css">
+    <link rel="stylesheet" href="/css/application.css">
 
   </head>
 
