--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -10,7 +10,7 @@ layout: wrapper
 		<div class="font-italic btn btn-danger btn-lg btn-block shadow overflow_wrap mb-3 text-left"><span class="tick"></span>Cardiopulmonary Rehabilitation</div>		
 	</div>
 	<div class="text-center col-lg-8 py-xl-4 mt-lg-5 mt-xl-0">
-		<img src="/assets/images/main.jpg" class="img-fluid" id="img_main">
+		<img src={{"/assets/images/main.jpg" | relative_url}} class="img-fluid" id="img_main">
 	</div>
 </section>
 
@@ -38,7 +38,7 @@ layout: wrapper
 			<li>Deputy Chair of APA acupuncture and dry needling committee</li>
 			<li>Committee member of APA Physiotherapy Business Australia</li>			
 		</ul>
-		<button class="btn btn-secondary float-right"><a href="/about/" class="text-white">More About Us</a></button>
+		<button class="btn btn-secondary float-right"><a href={{"/about/" | relative_url }} class="text-white">More About Us</a></button>
 	</div>
 </div>
 
@@ -80,17 +80,19 @@ layout: wrapper
 	</section>
 
 	<section class="col-lg-4 p-3">
-		<h5 class="font-weight-bold">Contacts</h5>
+		<h5 class="font-weight-bold">Contacts Us</h5>
 		<div class="row">
 			<ul class="col-3 list-unstyled font-weight-bold">
-				<li>Call Us</li>
-				<li>Text Us</li>
+				<li>Phone</li>
+				<li>Mobile</li>
+				<li>Email</li>
 				<li>Address</li>							
 			</ul>	
 			<ul class="col-9 list-unstyled">
 				<li>(02) 8819 4339</li>
-				<li>0488 859 426</li>	
-				<li>263 Rowe St, Eastwood, NSW 2122</li>						
+				<li>0450 588 670</li>
+				<li>info@northrydefamilyphysio.com.au</li>
+				<li>263 Rowe St, Eastwood, NSW 2122</li>										
 			</ul>
 	</section>
 	
