--- a/_layouts/wrapper.html
+++ b/_layouts/wrapper.html
@@ -18,7 +18,7 @@
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-beta/css/bootstrap.min.css" integrity="sha384-/Y6pD6FV/Vv2HJnA6t+vslU6fwYXjCFtcEpHbNJ0lyAFsXTsjBbfaDjzALeQsN6M" crossorigin="anonymous">
 
     <!-- My CSS -->
-    <link rel="stylesheet" href="/css/application.css">
+    <link rel="stylesheet" href= "{{"/css/application.css" | relative_url }}" >
 
   </head>
 
@@ -39,7 +39,7 @@
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-beta/js/bootstrap.min.js" integrity="sha384-h0AbiXch4ZDo7tp9hKZ4TsHbi047NrKGLO3SEJAg45jXxnGIfYzk4Si90RDIqNm1" crossorigin="anonymous"></script>
 
     <!-- My JavaScript -->
-    <script src ="{{baseurl}}/assets/javascript/sitewide.js"></script>
+    <script src ="{{"/assets/javascript/sitewide.js" | relative_url }}"></script>
 
   </body>
 </html>
