--- a/css/application.css
+++ b/css/application.css
@@ -49,7 +49,7 @@
 
  .bg_logo{
  	background-repeat: no-repeat;
- 	background-image: url("/assets/images/logo2.png");
+ 	background-image: url("{{"/assets/images/logo2.png"|relative_url}}");
  	background-size: auto 100%;
  	background-position: 3% 0;
  }
