Finish contact page

--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -1,4 +1,4 @@
-<footer class="navbar my_bg text-white mt-5">
+<footer class="navbar bg_my text-white ">
 	
 		<small id="copyright">&copy;Copyright | {{ site.title}} </small>
 	
