--- a/_layouts/wrapper.html
+++ b/_layouts/wrapper.html
@@ -7,7 +7,9 @@
       {% endif %}
     	 {{ site.title }}
     </title>
-       
+    
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+
     <!-- Add icon -->
     <link rel="shortcut icon" href="{{"/assets/images/logo.jpg" | relative_url }}" type="image/jpg">
 
