Revise header link address

--- a/_includes/header.html
+++ b/_includes/header.html
@@ -20,7 +20,7 @@
 	  		<div class="collapse navbar-collapse" id="collapsibleNavbar">
 				<ul class="navbar-nav ml-md-auto mr-lg-5 pr-lg-5 mr-3 ml-3 pl-3">
 					<li class="nav-item"><a class="nav-link text-white {% if page.location == 'home' %} font-weight-bold {% endif %}" href="{{ site.url }}">Home</a></li>
-					<li class="nav-item"><a class="nav-link text-white {% if page.title == 'About' %} font-weight-bold {% endif %}" href="{{"/about/" | relative_url }}">About Us</a></li>
+					<li class="nav-item"><a class="nav-link text-white {% if page.title == 'About' %} font-weight-bold {% endif %}" href="{{"/about" | relative_url }}">About Us</a></li>
 					<li class="nav-item dropdown">
 						<a class="nav-link dropdown-toggle text-white {% if page.title == 'Services' %} font-weight-bold {% endif %}" data-toggle="dropdown" href="#" role="button" aria-haspopup="true" aria-expanded="false">Services</a>
 					    <div class="dropdown-menu">
@@ -36,7 +36,7 @@
 					      -->
 					    </div>
 					</li>
-					<li class="nav-item"><a class="nav-link text-white {% if page.title == 'Contact Us' %} font-weight-bold {% endif %}" href="{{"/contact/" | relative_url }}">Contact Us</a></li>
+					<li class="nav-item"><a class="nav-link text-white {% if page.title == 'Contact Us' %} font-weight-bold {% endif %}" href="{{"/contact" | relative_url }}">Contact Us</a></li>
 				</ul>
 			</div>
 
