Revise logo link address

--- a/_includes/header.html
+++ b/_includes/header.html
@@ -4,7 +4,7 @@
 		
 
 			<!-- logo -->
-				<a class="navbar-brand ml-lg-5 pl-lg-5 ml-3 pl-3" id="logo" href="{{ site.url }}">
+				<a class="navbar-brand ml-lg-5 pl-lg-5 ml-3 pl-3" id="logo" href="{{"/" | relative_url }}">
 					<div>NORTH RYDE</div>
 					<div>FAMILY</div>
 					<div>PHYSIOTHERAPY</div>
